# Magma

./: .gitignore  README.md
shaders/: input_structures.glsl  mesh.frag  mesh.vert
source/: CMakeLists.txt  main.cpp
source/engine/: CMakeLists.txt  engine.cpp  engine.h  initializers.cpp  initializers.h  magma_sdl_manager.h  mesh.cpp  mesh.h  textures.cpp  textures.h
source/engine/core/: delegate.h  id_pool.h  injectee.h  injector.h  logger.h  magma_sdl_manager.cpp  magma_sdl_manager.h  math.h  reflectable.h  service_locator.h  time_manager.h
source/engine/ec/: camera_component.cpp  camera_component.h  component.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  first_person_controller_component.cpp  first_person_controller_component.h  input_component.h  keyboard_input_component.cpp  keyboard_input_component.h  mesh_render_component.cpp  mesh_render_component.h  mouse_keyboard_input_component.cpp  mouse_keyboard_input_component.h  render_component.cpp  render_component.h  transform_component.h
source/engine/ec/render/: camera_component.cpp  camera_component.h  directional_light_component.cpp  directional_light_component.h  gltf_mesh_render_component.cpp  gltf_mesh_render_component.h  predefined_mesh_render_component.cpp  predefined_mesh_render_component.h  render_component.cpp  render_component.h  render_object_component.cpp  render_object_component.h  transform_render_component.cpp  transform_render_component.h
source/engine/renderer/: descriptors.cpp  descriptors.h  geometry.cpp  geometry.h  gltf_mesh.cpp  gltf_mesh.h  gltf_mesh_loader.cpp  gltf_mesh_loader.h  images.cpp  images.h  initializers.cpp  initializers.h  loader.cpp  loader.h  mesh.cpp  mesh.h  metallic_roughness_material.cpp  metallic_roughness_material.h  pipelines.cpp  pipelines.h  renderer.cpp  renderer.h  textures.cpp  textures.h  types.h  vulkan_renderer.cpp  vulkan_renderer.h
temp/: vulkan_renderer.cpp
